--- a/_config.yml
+++ b/_config.yml
@@ -1,8 +1,8 @@
 # Site settings
-title: BY 11
-SEOTitle: 柏荧的博客 | BY Blog
+title: LT Math
+SEOTitle: LT的数学博客 | LT Math
 header-img: img/post-bg-desk.jpg
-email: qiubaiying@gmail.com
+email: charlestang1121@gmail.com
 description: "Every failure is leading towards success."
 keyword: "BY, BY Blog, 柏荧的博客, qiubaiying, 邱柏荧, iOS, Apple, iPhone"
 url: "http://qiubaiying.github.io"          # your host, for absolute URL
