--- a/_config.yml
+++ b/_config.yml
@@ -3,8 +3,8 @@ title: LT Math
 SEOTitle: LT的数学博客 | LT Math
 header-img: img/post-bg-desk.jpg
 email: charlestang1121@gmail.com
-description: "感受一点儿数学的美好和冲动"
-keyword: "数学"
+description: "MATH TEACHER"
+keyword: "NONE"
 url: "http://wwww.math321.xyz"          # your host, for absolute URL
 baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 #github_repo: "https://github.com/qiubaiying/qiubaiying.github.io.git" # you code repository
