--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ baseurl: ""      # for example, '/blog' if your blog hosted on 'host/blog'
 
 # Sidebar settings
 sidebar: true                           # whether or not using Sidebar.
-sidebar-about-description: "To be OR Not to be!"
+sidebar-about-description: "TO BE OR NOT TO BE"
 sidebar-avatar: /img/kangtuo.jpg      # use absolute URL, seeing it's used in both `/` and `/about/`
 
 
